# trtpo-ToDo

./: .gitignore  README.md  start.sh
AuthService/: .env.template  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
AuthService/alembic/: env.py
AuthService/alembic/versions/: 2025_03_25_1616-dd8d7e30f660_added_user.py  2025_03_25_1617-f20f3ec0d93f_added_user_attributes.py
AuthService/frontend/: app.js  index.html  styles.css
AuthService/src/: database.py  dependencies.py  exceptions.py  main.py  models.py  settings.py
AuthService/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
AuthService/src/repositories/: auow.py  base_repository.py  uow.py  user_repository.py
CoreService/: Dockerfile  Makefile  docker-compose.yml  dump.rdb  pyproject.toml
CoreService/coreservice/: manage.py
CoreService/coreservice/core/: apps.py  authentication.py  config.py  mixins.py  models.py  permission_base.py  serializers.py  urls.py  views.py
CoreService/coreservice/core/containers/: configuration.py  event.py
CoreService/coreservice/core/enums/: base.py  base_role.py  project_event.py  project_roles.py  project_status.py  task_event.py  task_roles.py  task_status.py  topics.py
CoreService/coreservice/core/kafka/: event_service.py  kafka_producer.py
CoreService/coreservice/core/migrations/: 0001_initial.py  0002_populate_initial_permissions.py  0003_added_email_field_to_user.py  0004_make_email_non_nullable.py
CoreService/coreservice/coreservice/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
CoreService/coreservice/projects/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
CoreService/coreservice/projects/migrations/: 0001_initial.py  0002_alter_project_status_alter_userproject_project_role.py
CoreService/coreservice/tasks/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
CoreService/coreservice/tasks/migrations/: 0001_initial.py  0002_alter_task_status_alter_usertask_task_role.py
docs/lab3/: REPORT.md
docs/lab4/: pairprogramming.md
docs/lab5/: lab5.md
docs/lab6/: lab6.md
